src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>FinServ__TotalNumberOfFinAccountsPrimaryOwner__c</fullName>
        <description>Total numbers of client&apos;s financial accounts as a primary owner.</description>
        <label>Number of Fin. Accounts - Primary Owner</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalNumberOfFinAccounts__c</fullName>
        <description>Total number of the client&apos;s financial accounts that are managed by our firm.</description>
        <formula>FinServ__TotalNumberOfFinAccountsPrimaryOwner__c + FinServ__TotalNumberOfFinAccountsJointOwner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Number of Financial Accounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalOutstandingCreditJointOwner__c</fullName>
        <label>Total Outstanding Credit - Joint Owner</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalOutstandingCreditPrimaryOwner__c</fullName>
        <label>Total Outstanding Credit - Primary Owner</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalOutstandingCredit__c</fullName>
        <description>Value of client&apos;s total outstanding credit from the financial accounts that are managed by our firm.</description>
        <formula>FinServ__TotalOutstandingCreditPrimaryOwner__c + FinServ__TotalOutstandingCreditJointOwner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Outstanding Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalPremium__c</fullName>
        <description>Total Premium field for Insurance</description>
        <label>Total Premium</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalRevenue__c</fullName>
        <label>Total Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__WalletShare__c</fullName>
        <formula>ROUND(((FinServ__TotalHeldFinAcctsPrimaryOwner__c + FinServ__TotalHeldFinAcctsJointOwner__c) / IF( (FinServ__TotalFinAcctsPrimaryOwner__c+FinServ__TotalFinAcctsJointOwner__c)=0,1,(FinServ__TotalFinAcctsPrimaryOwner__c+FinServ__TotalFinAcctsJointOwner__c))), 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wallet Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
	<fields>
        <fullName>Preferred_Date__c</fullName>
        <label>Preferred Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
	<fields>
        <fullName>jenkinbuild__c</fullName>
        <label>jenkinbuild</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>FinServ__My_Businesses</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.FinServ__IndustriesBusiness</value>
        </filters>
        <label>My Businesses</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FinServ__My_Clients</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>FinServ__TotalFinancialAccounts__c</columns>
        <columns>FinServ__AUM__c</columns>
        <columns>FinServ__WalletShare__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.FinServ__IndustriesIndividual</value>
        </filters>
        <filters>
            <field>FinServ__IndividualType__c</field>
            <operation>equals</operation>
            <value>Individual</value>
        </filters>
        <label>My Clients</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FinServ__My_Groups</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>FinServ__TotalFinancialAccounts__c</columns>
        <columns>FinServ__AUM__c</columns>
        <columns>FinServ__WalletShare__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.FinServ__IndustriesHousehold</value>
        </filters>
        <filters>
            <field>FinServ__IndividualType__c</field>
            <operation>equals</operation>
            <value>Group</value>
        </filters>
        <label>My Groups</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FinServ__My_Institutions</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>FinServ__ClientCategory__c</columns>
        <columns>FinServ__TotalFinancialAccounts__c</columns>
        <columns>FinServ__AUM__c</columns>
        <columns>FinServ__WalletShare__c</columns>
        <columns>FinServ__LastInteraction__c</columns>
        <columns>FinServ__NextInteraction__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.FinServ__IndustriesInstitution</value>
        </filters>
        <label>My Institutions</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FinServ__My_Retail_Clients</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>FinServ__ClientCategory__c</columns>
        <columns>FinServ__TotalFinancialAccounts__c</columns>
        <columns>FinServ__AUM__c</columns>
        <columns>FinServ__WalletShare__c</columns>
        <columns>FinServ__LastInteraction__c</columns>
        <columns>FinServ__NextInteraction__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.FinServ__IndustriesIndividual</value>
        </filters>
        <label>My Retail Clients</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <recordTypes>
        <fullName>Business_Account</fullName>
        <active>true</active>
        <description>This Record Type for Enabling Person Account</description>
        <label>Business Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__IndustriesBusiness</fullName>
        <active>true</active>
        <description>A business or an organization</description>
        <label>Business</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__IndustriesHousehold</fullName>
        <active>true</active>
        <description>A grouping of related people and institutions</description>
        <label>Household</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__IndustriesIndividual</fullName>
        <active>true</active>
        <description>A person who is a prospect or a client</description>
        <label>Individual</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__IndustriesInstitution</fullName>
        <active>true</active>
        <description>An institution that is a prospect or a client</description>
        <label>Institution</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>FinServ__NonPortalUserReferrer</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
                NOT(ISBLANK(FinServ__ReferredByUser__c)),
                NOT(ISPICKVAL(FinServ__ReferredByUser__r.UserType, &apos;Standard&apos;))
            )</errorConditionFormula>
        <errorDisplayField>FinServ__ReferredByUser__c</errorDisplayField>
        <errorMessage>Internal referrers must be internal Salesforce users.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__NotAllowingConversionFromIndividual</fullName>
        <active>false</active>
        <errorConditionFormula>1!=1</errorConditionFormula>
        <errorMessage>The Individual record type can&apos;t be changed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__NotAllowingConversionToIndividual</fullName>
        <active>false</active>
        <description>Not allowing changing the record type of &quot;non-Individual&quot; to &quot;Individual&quot; record type</description>
        <errorConditionFormula>1!=1</errorConditionFormula>
        <errorMessage>The record type can&apos;t be changed to Individual.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__SingleReferredByEntryByRecord</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
                ISBLANK(FinServ__ConversionDateTime__c),
                AND(
                    NOT(ISBLANK(FinServ__ReferredByUser__c)),
                    NOT(ISBLANK(FinServ__ReferredByContact__c))
                )
            )</errorConditionFormula>
        <errorDisplayField>FinServ__ReferredByContact__c</errorDisplayField>
        <errorMessage>Enter an internal referrer or an external referrer. You can list only one referrer for each referral.</errorMessage>
    </validationRules>
</CustomObject>